Improve performance of many render passes. https://bugs.webkit.org/show_bug.cgi?id=234008

Patch by Dan Glastonbury <djg@apple.com> on 2022-05-31
Reviewed by Kimmo Kinnunen.

Through experimentation, it was found that reducing the number of render passes
inflight in the system improves performance. Breaking command buffers with a
large number of render passes into smaller chunks, of at most 16 render passes,
brought the frame rate of ANGLE metal backend inline with ANGLE opengl on macOS
and iOS.

* Source/ThirdParty/ANGLE/changes.diff:
* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/ContextMtl.h:
* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/ContextMtl.mm:
(rx::ContextMtl::flushCommandBuffer):
(rx::ContextMtl::flushCommandBufferIfNeeded):
(rx::ContextMtl::present):
(rx::ContextMtl::getRenderPassCommandEncoder):
* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_common.h:

Canonical link: https://commits.webkit.org/251177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295082 268f45cc-cd09-0410-ab3c-d52691b4dbfc